--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true"
+        android:windowSoftInputMode="stateAlwaysHidden"/>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -22,9 +23,9 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
-    <uses-feature
-        android:glEsVersion="0x00020000"
-        android:required="true"/>
+    <!--<uses-feature-->
+        <!--android:glEsVersion="0x00020000"-->
+        <!--android:required="true"/>-->
 
     <application
         android:name="com.mhacks.android.MHacks"
